[package]
name = "druid-grid-graph-widget"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["John Skottis <giannis.sc@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid-color-thesaurus = {git = "https://github.com/giannissc/druid-color-thesaurus.git"}
rand = "0.8.3"
log = "0.4"

[dependencies.druid]
git = "https://github.com/linebender/druid"
rev = "8cac6defdb1ecf537d9b57bdd0aac4365950f2f4" # update this when upgrading to newer druid
features = ["im"]
