[package]
name = "druid-grid-graph-widget"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["John Skottis <giannis.sc@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid-color-thesaurus = {git = "https://github.com/giannissc/druid-color-thesaurus.git"}
druid-widget-nursery = "0.1.0"
druid = { version = "0.8.2", features = ["im"] }
rand = "0.8.3"
log = "0.4"
